--- a/dev/index.css
+++ b/dev/index.css
@@ -272,10 +272,10 @@ h1 .slow {
 }
 
 section.why {
-  position: absolute;
+  position: relative;
   margin: 0px 0 0 0;
   width: 100%;
-  top: max(600px, 90vh);
+  top: 50px;
   display: grid;
 }
 
@@ -482,6 +482,23 @@ div.little-grid {
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 
+.strip-button-styles {
+  border: none;
+  font-family: inherit;
+  appearance: none;
+  text-align: unset;
+
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+
+  -webkit-appearance: none;
+  border-radius: 0;
+}
 .little-course-card {
   cursor: pointer;
   padding: 28px;
@@ -496,9 +513,12 @@ div.little-grid {
 }
 
 .little-course-card:hover,
-.little-course-card:active {
+ .little-course-card:focus {
   background: rgb(255, 255, 255);
   outline: 1px solid black;
+}
+.little-course-card:active {
+  background: rgb(245, 245, 245);
 }
 
 .little-course-card .course-info {
@@ -549,6 +569,22 @@ div.little-grid {
   color: #888;
 }
 
+@media screen and (max-width: 600px) {
+  .little-course-card .course-name, 
+  .little-course-card .course-period {
+    font-size: 13px;
+  }
+  .little-course-card .grade, .gpa-header .title  {
+    font-size: 28px;
+  }
+  .little-course-card {
+    padding: 23px;
+  }
+  div.little-grid {
+    padding: 0px;
+  }
+}
+
 .main-card {
   margin: 0px auto 20px auto;
   padding: 30px;
@@ -569,12 +605,49 @@ div.little-grid {
   color: rgb(111 111 111);
 
   letter-spacing: 1px;
+
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: max-content 1fr;
+}
+@media screen and (max-width: 600px) {
+  .gpa-header {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr min-content;
+  }
+  .gpa-header .c-gpa-view-input {
+    width: 100%;
+    margin: 10px 0 0 0;
+  }
+  .c-gpa-view-input #gpa-view {
+    width: auto;
+  }
 }
 
 .gpa-value {
   font-weight: 600;
   letter-spacing: 0px;
   color: black;
+  margin: 0 0 0 0px;
+}
+.c-gpa-view-input {
+  margin: auto 0 0 auto;
+  height: 100%;
+
+  display: grid;
+}
+#gpa-view {
+  cursor: pointer;
+  margin: 3px 0;
+  padding: 0 7px;
+
+  width: 150px;
+  border: 1px solid rgb(197, 197, 197);
+  border-radius: 7px;
+  background: rgb(233 233 233);
+  color: #222;
+
+  font-family: inherit;
 }
 
 .graph-wrap {
